client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-next-client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      server: nest-next-client
  template:
    metadata:
      labels:
        server: nest-next-client
    spec:
      containers:
        - name: nest-next-client
          image: nest-next-client:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
