client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-next-client-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    server: nest-next-client
